"Edits to BK's most recent additions; corrected a package error that was causing compiling issues (package float and package floatrow cannot be used simultaneously as of a recent update). Updated tables. Finished revisions of Section II. More edits on BK's In Situ Process Monitoring next. More figures to add."#

--- a/nate-am-review/Main.tex
+++ b/nate-am-review/Main.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{booktabs}
-\usepackage{float}
+%\usepackage{float}
 \usepackage{floatrow}
 \usepackage{graphicx}
 \usepackage{import}
