--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-05-23 21:16:46 -0600 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-05-28 22:21:57 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Candes2008,
+	Author = {Emmanuel J Cand\'es and Michael B. Wakin},
+	Date-Added = {2019-05-28 22:20:43 -0600},
+	Date-Modified = {2019-05-28 22:21:56 -0600},
+	Journal = {IEEE Signal Processing Magazing},
+	Month = {March},
+	Number = {2},
+	Pages = {21-30},
+	Title = {An Introduction to Compressive Sampling},
+	Volume = {25},
+	Year = {2008}}
 
 @webpage{KernelMethod,
 	Author = {Wikipedia Contributors},
@@ -15,7 +27,8 @@
 	Lastchecked = {Online; Accessed 24-May-2019},
 	Title = {Kernel Method -- {Wikipedia}{,} The Free Encyclopedia},
 	Url = {https://en.wikipedia.org/w/index.php?title=Kernel_method&oldid=897664033},
-	Year = {2019}}
+	Year = {2019},
+	Bdsk-Url-1 = {https://en.wikipedia.org/w/index.php?title=Kernel_method&oldid=897664033}}
 
 @article{Ball2019,
 	Author = {Philip Ball},
@@ -2731,25 +2744,6 @@
 	Year = {2014},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.matdes.2014.07.006}}
 
-@article{Bhadeshia2009,
-	Abstract = {Neural networks are now a prominent feature of materials science with rapid progress in all sectors of the subject. It is premature, however, to claim that the method is established. There are genuine difficulties caused by the often incomplete exploration and publication of models. The assessment presented here is an attempt to compile a loose set of guidelines for maximising the impact of any models that are created, in order to encourage thoroughness in publication to a point where the work can be independently verified.},
-	Author = {Bhadeshia, H. K. D. H. and Dimitriu, R. C. and Forsik, S. and Pak, J. H. and Ryu, J. H.},
-	Date-Modified = {2018-12-18 15:39:46 -0700},
-	Doi = {10.1179/174328408X311053},
-	File = {:Users/njohnson/Documents/Articles/Applied Physics Review/Bhadesia{\_}Performance of neural networks in materialsscience.pdf:pdf},
-	Isbn = {174328408X},
-	Issn = {0267-0836},
-	Journal = {Materials Science and Technology},
-	Keywords = {errors,materials modelling,materials science,neural network,uncertainties,machine learning},
-	Number = {4},
-	Pages = {504--510},
-	Title = {{Performance of neural networks in materials science}},
-	Url = {http://www.tandfonline.com/doi/full/10.1179/174328408X311053},
-	Volume = {25},
-	Year = {2009},
-	Bdsk-Url-1 = {http://www.tandfonline.com/doi/full/10.1179/174328408X311053},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1179/174328408X311053}}
-
 @article{Fischer2006,
 	Abstract = {Modern methods of quantum mechanics have proved to be effective tools to understand and even predict materials properties. An essential element of the materials design process, relevant to both new materials and the optimization of existing ones, is knowing which crystal structures will form in an alloy system. Crystal structure can only be predicted effectively with quantum mechanics if an algorithm to direct the search through the large space of possible structures is found. We present a new approach to the prediction of structure that rigorously mines correlations embodied within experimental data and uses them to direct quantum mechanical techniques efficiently towards the stable crystal structure of materials.},
 	Author = {Fischer, Christopher C. and Tibbetts, Kevin J. and Morgan, Dane and Ceder, Gerbrand},
@@ -3084,82 +3078,83 @@
 	Year = {2007}}
 
 @book{Vernon1991,
-	author = {Vernon, D.},
-	title = {{Machine Vision}},
-	year = {1991},
-	publisher = {Prentice-Hall}}
+	Author = {Vernon, D.},
+	Publisher = {Prentice-Hall},
+	Title = {{Machine Vision}},
+	Year = {1991}}
 
 @article{Canny1986,
-	author = {Canny, John},
-	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-	volume = {PAMI-8},
-	number = {6},
-	year = {1986},
-	pages = {679--698},
-	doi = {10.1109/TPAMI.1986.4767851}}
-	
+	Author = {Canny, John},
+	Doi = {10.1109/TPAMI.1986.4767851},
+	Journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	Number = {6},
+	Pages = {679--698},
+	Volume = {PAMI-8},
+	Year = {1986},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TPAMI.1986.4767851}}
+
 @article{Hastie2009,
-	abstract = {During the past decade there has been an explosion in computation and information technology. With it has come vast amounts of data in a variety of fields such as medicine, biology, finance, and marketing. The challenge of understanding these data has led to the development of new tools in the field of statistics, and spawned new areas such as data mining, machine learning, and bioinformatics. Many of these tools have common underpinnings but are often expressed with different terminology. This book describes the important ideas in these areas in a common conceptual framework. While the approach is statistical, the emphasis is on concepts rather than mathematics. Many examples are given, with a liberal use of color graphics. It should be a valuable resource for statisticians and anyone interested in data mining in science or industry. The book's coverage is broad, from supervised learning (prediction) to unsupervised learning. The many topics include neural networks, support vector machines, classification trees and boosting-the first comprehensive treatment of this topic in any book. Trevor Hastie, Robert Tibshirani, and Jerome Friedman are professors of statistics at Stanford University. They are prominent researchers in this area: Hastie and Tibshirani developed generalized additive models and wrote a popular book of that title. Hastie wrote much of the statistical modeling software in S-PLUS and invented principal curves and surfaces. Tibshirani proposed the Lasso and is co-author of the very successful An Introduction to the Bootstrap. Friedman is the co-inventor of many data-mining tools including CART, MARS, and projection pursuit. FROM THE REVIEWS: TECHNOMETRICS "This is a vast and complex book. Generally, it concentrates on explaining why and how the methods work, rather than how to use them. Examples and especially the visualizations are principle features...As a source for the methods of statistical learning...it will probably be a long time before there is a competitor to this book."},
-	archivePrefix = {arXiv},
-	arxivId = {1010.3003},
-	author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-	doi = {10.1007/b94608},
-	eprint = {1010.3003},
-	file = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2009/Hastie, Tibshirani, Friedman - 	Elements.pdf:pdf},
-	isbn = {9780387848570},
-	issn = {03436993},
-	journal = {Elements},
-	mendeley-groups = {Reading List,machine learning},
-	pages = {337--387},
-	pmid = {15512507},
-	title = {{The Elements of Statistical Learning}},
-	url = {http://www.springerlink.com/index/10.1007/b94608},
-	volume = {1},
-	year = {2009}
-}
+	Abstract = {During the past decade there has been an explosion in computation and information technology. With it has come vast amounts of data in a variety of fields such as medicine, biology, finance, and marketing. The challenge of understanding these data has led to the development of new tools in the field of statistics, and spawned new areas such as data mining, machine learning, and bioinformatics. Many of these tools have common underpinnings but are often expressed with different terminology. This book describes the important ideas in these areas in a common conceptual framework. While the approach is statistical, the emphasis is on concepts rather than mathematics. Many examples are given, with a liberal use of color graphics. It should be a valuable resource for statisticians and anyone interested in data mining in science or industry. The book's coverage is broad, from supervised learning (prediction) to unsupervised learning. The many topics include neural networks, support vector machines, classification trees and boosting-the first comprehensive treatment of this topic in any book. Trevor Hastie, Robert Tibshirani, and Jerome Friedman are professors of statistics at Stanford University. They are prominent researchers in this area: Hastie and Tibshirani developed generalized additive models and wrote a popular book of that title. Hastie wrote much of the statistical modeling software in S-PLUS and invented principal curves and surfaces. Tibshirani proposed the Lasso and is co-author of the very successful An Introduction to the Bootstrap. Friedman is the co-inventor of many data-mining tools including CART, MARS, and projection pursuit. FROM THE REVIEWS: TECHNOMETRICS "This is a vast and complex book. Generally, it concentrates on explaining why and how the methods work, rather than how to use them. Examples and especially the visualizations are principle features...As a source for the methods of statistical learning...it will probably be a long time before there is a competitor to this book."},
+	Archiveprefix = {arXiv},
+	Arxivid = {1010.3003},
+	Author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
+	Doi = {10.1007/b94608},
+	Eprint = {1010.3003},
+	File = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2009/Hastie, Tibshirani, Friedman - 	Elements.pdf:pdf},
+	Isbn = {9780387848570},
+	Issn = {03436993},
+	Journal = {Elements},
+	Mendeley-Groups = {Reading List,machine learning},
+	Pages = {337--387},
+	Pmid = {15512507},
+	Title = {{The Elements of Statistical Learning}},
+	Url = {http://www.springerlink.com/index/10.1007/b94608},
+	Volume = {1},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.springerlink.com/index/10.1007/b94608},
+	Bdsk-Url-2 = {https://doi.org/10.1007/b94608}}
 
 @article{Bhadeshia2009,
-	abstract = {Neural networks are now a prominent feature of materials science with rapid progress in all sectors of the subject. It is premature, however, to claim that the method is established. There are genuine difficulties caused by the often incomplete exploration and publication of models. The assessment presented here is an attempt to compile a loose set of guidelines for maximising the impact of any models that are created, in order to encourage thoroughness in publication to a point where the work can be independently verified.},
-	author = {Bhadeshia, H. K. D. H. and Dimitriu, R. C. and Forsik, S. and Pak, J. H. and Ryu, J. H.},
-	doi = {10.1179/174328408X311053},
-	file = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2009/Bhadeshia et al. - Materials Science and Technology.pdf:pdf},
-	isbn = {174328408X},
-	issn = {02670836},
-	journal = {Materials Science and Technology},
-	keywords = {errors,materials modelling,materials science,neural network,uncertainties},
-	mendeley-groups = {additive manufacturing/machine learning,pub-prop/NASA-ESI,Reading List,machine learning},
-	number = {4},
-	pages = {504--510},
-	title = {{Performance of neural networks in materials science}},
-	volume = {25},
-	year = {2009}
-}
+	Abstract = {Neural networks are now a prominent feature of materials science with rapid progress in all sectors of the subject. It is premature, however, to claim that the method is established. There are genuine difficulties caused by the often incomplete exploration and publication of models. The assessment presented here is an attempt to compile a loose set of guidelines for maximising the impact of any models that are created, in order to encourage thoroughness in publication to a point where the work can be independently verified.},
+	Author = {Bhadeshia, H. K. D. H. and Dimitriu, R. C. and Forsik, S. and Pak, J. H. and Ryu, J. H.},
+	Doi = {10.1179/174328408X311053},
+	File = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2009/Bhadeshia et al. - Materials Science and Technology.pdf:pdf},
+	Isbn = {174328408X},
+	Issn = {02670836},
+	Journal = {Materials Science and Technology},
+	Keywords = {errors,materials modelling,materials science,neural network,uncertainties},
+	Mendeley-Groups = {additive manufacturing/machine learning,pub-prop/NASA-ESI,Reading List,machine learning},
+	Number = {4},
+	Pages = {504--510},
+	Title = {{Performance of neural networks in materials science}},
+	Volume = {25},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1179/174328408X311053}}
 
 @article{Hornik1989,
-	author = {Hornik, Kurt and Stinchcombe, Maxwell and White, Halbert},
-	file = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/1989/Hornik, Stinchcombe, White - Neural Networks.pdf:pdf},
-	journal = {Neural Networks},
-	keywords = {-feedforward,back-propagation networks,capability,mapping networks,network representation,networks,sigma-pi networks,squashing functions,stone-weierstrass theorem,universal approximation},
-	mendeley-groups = {machine learning},
-	pages = {359--366},
-	title = {{Multilayer Feedforward Networks are Universal Approximators}},
-	volume = {2},
-	year = {1989}
-}
+	Author = {Hornik, Kurt and Stinchcombe, Maxwell and White, Halbert},
+	File = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/1989/Hornik, Stinchcombe, White - Neural Networks.pdf:pdf},
+	Journal = {Neural Networks},
+	Keywords = {-feedforward,back-propagation networks,capability,mapping networks,network representation,networks,sigma-pi networks,squashing functions,stone-weierstrass theorem,universal approximation},
+	Mendeley-Groups = {machine learning},
+	Pages = {359--366},
+	Title = {{Multilayer Feedforward Networks are Universal Approximators}},
+	Volume = {2},
+	Year = {1989}}
 
 @article{Yosinski2014,
-	abstract = {Many deep neural networks trained on natural images exhibit a curious phenomenon in common: on the first layer they learn features similar to Gabor filters and color blobs. Such first-layer features appear not to be specific to a particular dataset or task, but general in that they are applicable to many datasets and tasks. Features must eventually transition from general to specific by the last layer of the network, but this transition has not been studied extensively. In this paper we experimentally quantify the generality versus specificity of neurons in each layer of a deep convolutional neural network and report a few surprising results. Transferability is negatively affected by two distinct issues: (1) the specialization of higher layer neurons to their original task at the expense of performance on the target task, which was expected, and (2) optimization difficulties related to splitting networks between co-adapted neurons, which was not expected. In an example network trained on ImageNet, we demonstrate that either of these two issues may dominate, depending on whether features are transferred from the bottom, middle, or top of the network. We also document that the transferability of features decreases as the distance between the base task and target task increases, but that transferring features even from distant tasks can be better than using random features. A final surprising result is that initializing a network with transferred features from almost any number of layers can produce a boost to generalization that lingers even after fine-tuning to the target dataset.},
-	archivePrefix = {arXiv},
-	arxivId = {1411.1792},
-	author = {Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
-	eprint = {1411.1792},
-	file = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2014/Yosinski et al. - Advances in Neural Information Processing Systems 27 (Proceedings of NIPS).pdf:pdf},
-	issn = {10495258},
-	journal = {Advances in Neural Information Processing Systems 27 (Proceedings of NIPS)},
-	mendeley-groups = {machine learning},
-	pages = {1--9},
-	title = {{How transferable are features in deep neural networks?}},
-	url = {http://arxiv.org/abs/1411.1792},
-	volume = {27},
-	year = {2014}
-}
+	Abstract = {Many deep neural networks trained on natural images exhibit a curious phenomenon in common: on the first layer they learn features similar to Gabor filters and color blobs. Such first-layer features appear not to be specific to a particular dataset or task, but general in that they are applicable to many datasets and tasks. Features must eventually transition from general to specific by the last layer of the network, but this transition has not been studied extensively. In this paper we experimentally quantify the generality versus specificity of neurons in each layer of a deep convolutional neural network and report a few surprising results. Transferability is negatively affected by two distinct issues: (1) the specialization of higher layer neurons to their original task at the expense of performance on the target task, which was expected, and (2) optimization difficulties related to splitting networks between co-adapted neurons, which was not expected. In an example network trained on ImageNet, we demonstrate that either of these two issues may dominate, depending on whether features are transferred from the bottom, middle, or top of the network. We also document that the transferability of features decreases as the distance between the base task and target task increases, but that transferring features even from distant tasks can be better than using random features. A final surprising result is that initializing a network with transferred features from almost any number of layers can produce a boost to generalization that lingers even after fine-tuning to the target dataset.},
+	Archiveprefix = {arXiv},
+	Arxivid = {1411.1792},
+	Author = {Yosinski, Jason and Clune, Jeff and Bengio, Yoshua and Lipson, Hod},
+	Eprint = {1411.1792},
+	File = {:Users/bkappes/Dropbox (BeamTeam)/Library/lit/2014/Yosinski et al. - Advances in Neural Information Processing Systems 27 (Proceedings of NIPS).pdf:pdf},
+	Issn = {10495258},
+	Journal = {Advances in Neural Information Processing Systems 27 (Proceedings of NIPS)},
+	Mendeley-Groups = {machine learning},
+	Pages = {1--9},
+	Title = {{How transferable are features in deep neural networks?}},
+	Url = {http://arxiv.org/abs/1411.1792},
+	Volume = {27},
+	Year = {2014},
+	Bdsk-Url-1 = {http://arxiv.org/abs/1411.1792}}
